--- a/src/client/tictactoe/tictactoe.vcxproj
+++ b/src/client/tictactoe/tictactoe.vcxproj
@@ -57,12 +57,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <OutputFile>../../../deploy/$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalDependencies>winmm.lib;sfml-system-d.lib;sfml-graphics-d.lib;sfml-audio-d.lib;sfml-window-d.lib;sfgui-d.lib;enet-Debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;winmm.lib;sfml-system-d.lib;sfml-graphics-d.lib;sfml-audio-d.lib;sfml-window-d.lib;sfgui-d.lib;enet-Debug.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -81,7 +82,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <OutputFile>../../../deploy/$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalDependencies>winmm.lib;sfml-system.lib;sfml-graphics.lib;sfml-audio.lib;sfml-window.lib;sfgui.lib;enet-Release.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;winmm.lib;sfml-system.lib;sfml-graphics.lib;sfml-audio.lib;sfml-window.lib;sfgui.lib;enet-Release.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -91,6 +92,7 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Driver.h" />
     <ClInclude Include="GUI.h" />
+    <ClInclude Include="Net.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SMain.h" />
     <ClInclude Include="stdafx.h" />
@@ -100,6 +102,7 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Driver.cpp" />
     <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="Net.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SMain.cpp" />
     <ClCompile Include="stdafx.cpp">
